<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:background="@color/design_default_color_primary_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlertAD"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/yesButtonAD"
                android:text="@string/yes"
                android:layout_below="@+id/textAlertAD"
                android:layout_marginTop="25dp"
                android:background="@color/colorAccent"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/cardview_light_background"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/noButtonAD"
                android:text="@string/no"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:background="@color/design_default_color_primary_dark"
                android:textColor="@color/cardview_light_background"
                android:layout_below="@+id/textAlertAD"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>.

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>